Fixed mobile spacing of draft

--- a/draft/css/style.css
+++ b/draft/css/style.css
@@ -488,7 +488,7 @@ body {margin:0; overflow-x: hidden;}
   }
 
   #panel1 {
-    height: 300px;
+    height: 400px;
   }
 
   #panel1 #content {
@@ -582,6 +582,10 @@ body {margin:0; overflow-x: hidden;}
 }
 
 @media screen and (max-width: 500px) {
+
+  #blurbs {
+    padding-bottom: 70px;
+  }
 
   #blurb h2 {
     /*text-align: center;*/
